@@ -52,7 +52,7 @@ public class ObjectMapperUtils {
     public static <D, T> List<D> mapAll(final Collection<T> entityList, Class<D> outCLass) {
         return entityList.stream()
                 .map(entity -> map(entity, outCLass))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
